--- a/locales/zh.json
+++ b/locales/zh.json
@@ -1,552 +1,15 @@
 {
-  "overview.totel.ram": "总内存",
-  "overview.totel.storage": "总存储",
-  "overview.use.storage": "可用存储",
-  "overview.rack.type": "资源池类型",
-  "overview.vm.used": "虚拟机使用",
-  "overview.company.ge": "个",
-
-  "severity": "严重性",
-  "ManagementPortal.header": "欢迎使用管理界面",
-  "all": "全部",
-  "pagination":"看见大家反馈",
-  "datacenter.mchinesList.refresh": "刷新",
-  "datacenter.mchinesList.batchOperation": "批量操作",
-
-  "rack": "资源池",
-  "rack.edit": "编辑资源池",
-  "rack.load.balancing": "负载均衡",
-  "rack.batch.set.ipmi": "批量设置唤醒参数",
-  "rack.batch.set.ipmi.success": "批量设置唤醒参数成功",
-  "rack.batch.set.ipmi.error": "批量设置唤醒参数失败",
-  "rack.delete": "删除资源池",
-  "rack.delete.confirm": "您确定要删除当前选中的资源池吗?",
-  "rack.delete.success": "删除资源池成功",
-  "rack.delete.error": "删除资源池失败",
-  "rack.edit.name": "资源池名称",
-  "rack.edit.name.message": "服务器池名称不能为空!",
-  "rack.edit.description": "描述",
-  "rack.edit.ha": "高可用HA",
-  "rack.edit.success": "编辑资源池成功",
-  "rack.edit.error": "编辑资源池失败",
-  "rack.edit.load.balancing.success": "编辑负载均衡成功",
-  "rack.edit.load.balancing.error": "编辑负载均衡失败",
-
-  "Create.application":"创建应用组",
-  "Edit.application":"编辑",
-  "Edit.application.group":"编辑应用组",
-  "Delete.application":"删除",
-  "Vm.appLoadBalance":"应用负载均衡",
-  "Deployment.application.group":"部署应用组",
-  "Undeploy.application.group":"取消部署应用组",
-  "Application.name":"名称",
-  "Application.state":"状态",
-  "Undeploy.application.sure":"确定要取消部署吗",
-  "Delete.application.sure":"您确定要删除此应用组吗",
-  "Application.nmae.null":"名称不能为空",
-  "Vm.datacenter.vapp":"虚拟数据中心",
-  "Vm.datacenter.vapp.null":"虚拟数据中心不能为空",
-  "Application.state.choice":"请选择状态",
-  "App.loadBalance.state":"选择负载均衡状态",
-  "App.loadBalance.open":"开启",
-  "App.loadBalance.off":"关闭",
-  "App.loadBalance.template":"模板",
-  "LoadBalance.template.choice":"请选择模板",
-  "App.template.choice":"选择模板",
-  "Vapp.loadBalance.type":"负载类型",
-  "Vapp.loadBalance.type.choice":"请选择负载类型",
-  "Maximum.online.traffic":"最大在线访问量",
-  "Maximum.online.traffic.null":"最大在线访问量不能为空",
-  "Application.Port":"端口",
-  "Application.Port.Null":"端口不能为空",
 
 
-  "hardDisk.description":"描述",
-  "HardDisk.all.size":"总大小",
-  "HardDisk.capacity.choose":"容量必选",
-  "HardDisk.service.class":"服务级别",
-  "Service.class.choose":"服务级别必选",
-  "HardDisk.delete.sure":"您确定要删除此硬盘",
-  "HardDisk.vm":"虚拟机",
-  "HardDisk.tier":"层",
-  "HardDisk.total.tapacity":"总容量",
-  "Create.HardDisk":"创建",
-  "Edit.HardDisk":"编辑",
-  "HardDisk.Delete":"删除",
-  "Add.HardDisk":"创建硬盘",
-  "EditHard.Disks":"编辑硬盘",
-
-
-  "Persistent.both.choose":"全选",
-  "Persistent.clone":"克隆",
-  "Persistent.size":"大小",
-  "Persistent.edit":"编辑",
-  "Persistent.cancle":"取消",
-  "Persistent.accept":"接受",
-  "Persistent.storage.type":"选择你的存储类型",
-  "Product.persistent.sucess":"生成模板成功",
-  "Product.persistent.error":"生成模板失败",
-  "Persistent.description":"描述",
-  "Persistent.description.null":"描述不能为空",
-  "Edit.persistent.hardDisks":"编辑硬盘",
-  "Persistent.hardDisk.type":"类型",
-  "Persistent.hardDisk.classes":"类别",
-  "Persistent.hardDisk.classes.null":"类别不能为空",
-  "Persistent.CPU.null":"CPU不能为空",
-  "Persistent.storage.null":"内存不能为空",
-  "Persistent.storage":"内存",
-  "Persistent.Disk":"磁盘",
-  "Persistent.disk.null":"磁盘不能为空",
-  "Persistent.disk.control":"磁盘控制",
-  "Persistent.disk.control.choose":"请选择磁盘控制",
-  "Persistent.net.control":"网络控制器",
-  "Persistent.net.control.choose":"请选择网络控制器",
-  "Persistent.CPU.hot":"CPU热添加",
-  "Persistent.storage.hot":"内存热添加",
-  "Persistent.share.template":"共享模板",
-  "Persistent.enabled.chef":"启用Chef",
-  "Persistent.User":"用户",
-  "Persistent.PassWord":"密码",
-  "Product.specify.template":"生成指定模板",
-  "Product.template.choose":"选择生成模板",
-  "Persistent.costCode":"成本代码",
-  "Persistent.Nothing":"没有",
-  "Edit.VmTemplate.Sucess":"编辑虚拟模板成功",
-  "Edit.VmTemplate.Error":"编辑虚拟模板失败",
-  "PersistentTemplate.delete.sure":"您确定要删除此模板吗",
-  "PersistentTemplate.delete.success":"删除模板成功",
-  "PersistentTemplate.delete.error":"删除模板失败",
-  "Add.PersistentTemplate":"创建永久模板",
-  "Add.PersistentTemplate.Error":"创建永久模板失败",
-  "Persistent.Mainframe":"主机",
-  "Persistent.App":"应用组",
-  "Create.PersistentTemplate":"创建",
-  "Edit.PersistentTemplate":"编辑",
-  "Delete.PersistentTemplate":"删除",
-  "Add.Persistent.VmTemplate":"创建永久虚拟模板",
-  "Edit.Persistent.VmTemplate":"编辑永久虚拟模板",
-  "PersistentAvailableArea":"可用区",
-  "Persistent.template.size":"模板大小",
-  "Persistent.template.state":"状态",
-  "Persistent.Vm":"虚拟机",
-  "Persistent.living.example":"实例",
-
-  "Recycle.chooseVDC":"选择VDC",
-  "Recycle.chooseVAPP":"选择VAPP",
-  "Recycle.restore.Vm":"还原虚拟机",
-  "Recycle.recover.Vm":"该操作将使用回收站中的磁盘和配置恢复一台虚拟机",
-  "Recycle.Delete":"删除磁盘",
-  "Recycle.delete.beyond.retrieve":"删除磁盘操作不可恢复",
-  "Recycle.Name":"名称",
-  "Recycle.Ram":"内存",
-  "Recycle.Time":"日期",
-  "Recycle.redistribute.disk":"重新分配磁盘",
-  "Delete.Recycle":"删除",
-
-  "manage.system.management":"系统管理",
-  "manage.serial":"序列号",
-  "manage.DCD":"系统参数",
-  "manage.resource.scheduling":"资源调度",
-  "manage.account":"账户",
-  "manage.business.management":"业务管理",
-  "manage.order":"工单",
-  "manage.alarm":"告警",
-  "manage.billing":"计费",
-  "manage.organizational":"组织管理",
-  "manage.workflow":"工作流",
-  "manage.safety.management":"安全管理",
-  "manage.password.policy":"密码策略",
-  "manage.access.policy":"访问策略",
-  "manage.ACLPolicy":"ACL策略",
-  "manage.antivirus.policy":"防病毒策略",
-  "manage.operation.analysis":"运营分析",
-  "manage.commitLog":"操作日志",
-  "manage.logstash":"日志收集",
-  "manage.report":"报表",
-  "manage.system.maintenance":"系统维护",
-  "manage.equipment.upgrade":"设备升级",
-  "manage.servicesAndDownloads":"服务与下载",
-  "manage.aKeyTest":"一键检测",
-  "manage.automatic.operation":"自动运维管理",
-
-  "manage.system.parameter":"系统参数",
-  "manage.system.mailServer":"邮件服务器",
-  "manage.system.routine":"常规",
-  "manage.system.information.parameter":"常规信息参数",
-  "manage.system.logoFile":"Logo文件",
-  "manage.system.currentShow":"列表页每页显示数量",
-  "manage.system.displayURL":"点击Logo时显示URL",
-  "manage.system.allowPasswordChange":"允许用户修改自己的密码",
-  "manage.system.userLogOff":"允许用户注销",
-  "manage.system.virtualMachineDiskOptions":"显示虚拟机磁盘选项",
-  "manage.system.redirectedURL":"用户注销后重定向到URL",
-  "manage.system.redirect":"再次登录进来默认跳转页面",
-  "manage.system.softLimitReached":"当达到软限制时，提示详细信息",
-  "manage.system.hardLimitReached":"当达到硬限制时，提示详细信息",
-  "manage.system.workflowAddress":"工作流地址",
-  "manage.system.enableWorkflow":"启用工作流",
-  "manage.system.enableDiskRecycle":"启用磁盘回收站",
-  "manage.system.enableFirewallPrivateVDC":"为私有VDC启用防火墙",
-  "manage.system.preserve":"保存",
-  "manage.system.dataCenter":"数据中心",
-  "manage.system.dataCenterInformation":"数据中心信息参数",
-  "manage.system.defaultEsageTemplateRepository":"默认esage模板仓库（如果为空将不创建）",
-  "manage.system.remoteTemplateDownload":"远程模板库下载进度更新间隔（秒）",
-  "manage.system.dataCenterUpdate":"数据中心数据更新间隔（秒）",
-  "manage.system.eventLogUpdate":"事件日志更新间隔（秒）",
-  "manage.system.numberOfIPAddresses":"列表中每页显示的IP地址数量",
-  "manage.system.remoteToVirtualMachines":"允许远程访问虚拟机",
-  "manage.system.vappDeploymentUpdate":"vApp部署进度更新间隔（秒）",
-  "manage.system.vappUpdateInterval":"vApp更新间隔（秒）",
-  "manage.system.hypervisorDefaultPassword":"默认的hypervisor密码",
-  "manage.system.hypervisorDefaultPort":"默认的hypervisor端口",
-  "manage.system.hypervisorDefaultUser":"默认的hypervisor用户",
-  "manage.system.permissibleSize":"硬件管理允许的大小（GB）",
-  "manage.system.defaultMinimumVLANID":"默认最小VLAN ID",
-  "manage.system.defaultMaximumVLANID":"默认最大VLAN ID",
-  "manage.system.lostVirtualTransformationUpdate":"丢失的虚拟镜像转换更新间隔（秒）",
-  "manage.system.network":"网络",
-  "manage.system.networkInformationParameters":"网络信息参数",
-  "manage.system.netWorkName":"名称",
-  "manage.system.netmask":"网络掩码",
-  "manage.system.networkAdress":"网络地址",
-  "manage.system.gateway":"网关",
-  "manage.system.chieflyDNS":"首要DNS",
-  "manage.system.subordinationDNS":"次要DNS",
-  "manage.system.DNSpostfix":"DNS后缀",
-  "manage.system.mailServerParameters":"邮件服务器参数",
-  "manage.system.serverAddress":"服务器地址",
-  "manage.system.portNumber":"端口号",
-  "manage.system.serverRequiresAuthentication":"服务器要求身份验证",
-  "manage.system.senderName":"发件人姓名",
-  "manage.system.senderEmailAddress":"发件人邮箱地址",
-  "manage.system.needToSSIDeal":"是否需要SSI协议",
-  "manage.system.reset":"重置",
-  "manage.system.mailTest":"邮箱测试",
-
-  "manage.configurationMaintenanceMode":"配置维护模式",
-  "manage.enableMaintenanceMode":"启用维护模式",
-  "manage.openMaintenanceMode":"开启维护模式后，控制台/外部API不再执行任何操作，但是运行的虚拟机不受影响",
-  "manage.updateInformation":"升级信息",
-  "manage.prepareToUpgradeFile":"准备升级文件",
-  "manage.Upgrade":"升级",
-  "manage.restartUpgrade":"重启主机完成升级",
-  "manage.currentVersionOfDevice":"设备当前版本",
-  "manage.latestVersion":"您的设备已经是最新版本",
-  "manage.upgradeToOtherVersions":"升级到其他版本",
-  "manage.getFile":"你可以通过以下方式获取升级文件",
-  "manage.downloadUpgradeFileBrowser":"步骤1：通过浏览器下载升级文件",
-  "manage.updateFileToServer":"步骤2：升级文件上传到服务器",
-  "manage.downloadUpgradeFile":"下载升级文件",
-  "manage.uploadFiles":"上传文件...",
-  "manage.browse":"浏览",
-  "manage.beingUpdated":"正在升级",
-  "manage.upgradeDetails":"升级详情",
-  "manage.allRolledBack":"全部回滚",
-  "manage.failedTryAgain":"失败重试",
-  "manage.rollBackPatch":"回滚补丁包",
-  "manage.status":"状态",
-  "manage.hostname":"主机名称",
-  "manage.IPAdress":"IP地址",
-  "manage.currentVersion":"当前版本",
-  "manage.updateStatus":"升级状态",
-
-  "manage.resource.addBalancerPolicy":"添加全局负载均衡策略",
-  "manage.resource.addBalancerPolicy.title":"全局负载均衡策略",
-  "manage.resource.addBalancerPolicy.success":"添加全局负载均衡策略成功",
-  "manage.resource.addBalancerPolicy.error":"添加全局负载均衡策略失败",
-  "manage.resource.addSharedHostPolicy":"添加共享主机策略",
-  "manage.resource.delete":"删除",
-  "manage.resource.delete.BalancerPolicy.title":"删除全局负载均衡策略",
-  "manage.resource.delete.BalancerPolicy.success":"删除全局负载均衡策略成功",
-  "manage.resource.delete.BalancerPolicy.confirm":"您确认删除这个全局负载均衡策略吗?",
-  "manage.resource.delete.BalancerPolicy.error":"删除全局负载均衡策略失败",
-  "manage.resource.fitPolicy":"负载均衡",
-  "manage.resource.type":"类型",
-  "manage.resource.description":"描述",
-  "manage.resource.add.fitPolicy":"策略类型",
-  "manage.resource.add.datacenter":"数据中心",
-  "manage.resource.add.datacenter.all":"所有",
-  "manage.resource.add.Loadbalancetype":"自动化调度策略",
-  "manage.resource.add.Loadbalancetype.PROGRESSIVE":"贪婪模式",
-  "manage.resource.add.Loadbalancetype.PERFORMANCE":"轮询模式",
-  "manage.resource.add.Loadbalancetype.chose":"请选择",
-
-  "role.refresh":"刷新",
-  "role.create":"创建角色",
-  "role.edit":"编辑角色",
-  "role.delete":"删除",
-  "role.copy":"克隆角色",
-  "role.information":"基本信息",
-  "role.authorization":"权限设置",
-  "role.name":"名称",
-  "role.exprise":"虚拟组织",
-  "global.administratorRole":"使角色为全局角色",
-  "role.removed":"您确定要删除这个角色吗",
-  "role.choice":"请选择一个角色",
-
-  "systemEdit":"编辑",
-  "systemDelete":"删除",
-  "systemAdd":"添加",
-  "systemFormat":"格式化",
-  "systemSynchronization":"同步",
-  "fileSystem":"集群文件系统",
-  "fileSystemName":"名称",
-  "fileSystemType":"类型",
-  "fileSystemCapacity":"容量",
-  "fileSystemActiveVolume":"可用容量",
-  "fileSystemPath":"路径",
-  "fileSystemCreate":"添加集群文件系统",
-  "fileSystemDescription":"描述",
-  "fileSystemSure":"确定",
-  "fileSystemCancel":"取消",
-  "choicePhysicalMachine":"请选择至少一个物理机",
-  "fileSystemStorageType":"请选择一个存储类型",
-  "fileSystemServerIp":"服务IP",
-  "fileSystemEdit":"编辑集群文件系统",
-  "fileSystemPort":"端口",
-  "deleteFileSystem":"您确定要删除这个群文件系统吗",
-  "fileMaximumNumber":"集群允许的最大节点数",
-  "fileSystemHost":"使用集群文件系统的主机",
-  "fileSystemBatchOperation":"批量操作",
-  "fileSystemEnabled":"启用集群文件系统",
-  "fileSystemStop":"停止集群文件系统",
-  "fileSystemHostDelete":"从主机上删除集群文件系统",
-  "fileSystemState":"状态",
-  "fileSystemSucsses":"集群存储是否成功",
-  "fileSystemHostSatrt":"启动",
-  "fileSystemHostStop":"停止",
-  "fileHostStart":"您确定要启动集群文件管理系统",
-  "fileHostDelete":"您确定要从主机上删除集群文件管理系统",
-  "fileHostStop":"您确定要停止集群文件管理系统",
-  "fileSystemAddHost":"为集群文件系统增加主机",
-  "fileSystemNotNull":"集群的最大节点数不能为空",
-  "fileDescriptionNotNull":"集群文件系统描述不能为空",
-  "filePortNotNull":"端口不能为空",
-  "fileSystemFormat":"是否格式化",
-  "fileSystemTypeNull":"类型不能为空",
-  "choiceLun":"请选择一个lunIqn",
-  "fileSystemIPNull":"集群文件系统IP不能为空",
-  "fileSystemUserName":"用户名",
-  "fileSystemUserPassWord":"密码",
-  "fileSystemNameNotEmpty":"集群文件系统名称不能为空",
-  "fileSystemTypeNotEmpty":"集群文件系统类型不能为空",
-  "choiceStorageTypeNotEmpty":"请选择一个存储类型",
-  "fileSystemHostName":"主机名称",
-  "fileSystemResoucePool":"资源池",
-  "choiceResoucePool":"请选择一个资源池",
-
-  "backUpConfigName":"名称",
-  "configNameNotEmpty":"名称不能为空",
-  "configDescription":"描述",
-  "backUpConfigDelete":"删除",
-  "configDeleteSure":"您确定要删除此策略吗",
-  "configEncoding":"编码",
-  "backUpConfig":"备份策略",
-  "configEditAttribute":"编辑属性",
-  "backupManagers":"备份管理器",
-  "backUpConfigEdit":"编辑",
-  "backUpConfigAdd":"添加",
-  "createBackUpConfig":"创建备份策略",
-  "configBasicInfo":"基本信息",
-  "configSnapProtect":"快照备份",
-  "fileSystemBackup":"文件系统备份",
-  "backUpConfigFullBackup":"完整的备份",
-  "editBackUpConfig":"编辑备份策略",
-  "editBackupManager":"编辑备份管理器",
-  "Backup.correct.format.name":"请输入正确格式的名称",
-  "Backup.IP.Null":"IP不能为空",
-  "Backup.correct.format.IP":"请输入正确格式的IP",
-  "Backup.User":"用户",
-  "Backup.User.Null":"用户不能为空",
-  "Backup.correct.format.UserName":"请输入正确格式的用户名",
-  "Backup.Password":"密码",
-  "Backup.Password.null":"密码不能为空",
-  "Backup.CorrectFormat.Password":"请输入正确格式的密码",
-  "Delete.backupManager":"删除备份管理器",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
-
-  "server":"服务器",
-  "virtualMachine":"虚拟机",
-  "applicationGroup":"应用组",
-  "usageOfCPU":"CPU使用",
-  "usageOfMemory":"内存使用",
-  "usageOfDisk":"磁盘使用",
-  "storage":"存储",
-  "dataCenter":"数据中心",
-  "user":"用户",
-  "journal": "日志",
-  "used": "已用",
-  "available": "可用",
-  "total": "总共",
-  "memory": "内存",
-
-  "access.policy.header": "访问策略",
-  "access.policy.button.refresh": "刷新",
-  "access.policy.button.add": "增加访问策略",
-  "access.policy.button.view": "查看访问策略",
-  "access.policy.button.edit": "编辑访问策略",
-  "access.policy.button.delete": "删除访问策略",
-
-
-  "report.monitorReport":"监控报表",
-  "report.resourceUseAnalysis":"资源使用分析",
-  "monitor.serverReport":"服务器报表",
-  "monitor.vmReport":"虚拟机报表",
-  "monitor.topnReport":"TopN统计报表",
-  "monitor.selectQueryCondition":"选择您的查询条件",
-  "monitor.monitorServer":"服务器",
-  "monitor.statisticalCycle":"统计周期",
-  "monitor.startTime":"开始时间",
-  "monitor.endTime":"截止时间",
-  "monitor.statisticalType":"统计类型",
-  "monitor.query":"查询",
-  "monitor.reset":"重置",
-  "monitor.queryResult":"您的查询结果",
-  "monitor.diskWriteSpeed":"磁盘写速度",
-  "monitor.memoryUtilization":"内存利用率",
-  "monitor.diskReadSpeed":"磁盘读速度",
-  "monitor.queryCondition":"查询条件",
-  "monitor.monitorName":"名称",
-  "monitor.monitorIpAddress":"IP地址",
-  "monitor.hourlySearch":"按小时搜索",
-  "monitor.daylySearch":"按天搜索",
-  "monitor.weeklySearch":"按周搜索",
-  "monitor.monthlySearch":"按月搜索",
-  "monitor.yearlySearch":"按年搜索",
-  "monitor.cycleSelect":"周期选择",
-  "monitor.cpuRate":"CPU使用率",
-  "monitor.hardDiskTotalRate":"硬盘总利用率",
-  "monitor.networkTotalTraffic":"网络总流量",
-  "monitor.networkReadTraffic":"网络读流量",
-  "monitor.networkWriteTraffic":"网络写流量",
-  "monitor.monitorVM":"虚拟机",
-  "monitor.monitorServerPool":"服务器池",
-  "monitor.diskIO":"磁盘IO",
-  "operationLog":"操作日志",
-  "operationLogSummary":"操作日志总览",
-  "allEvent":"全部事件",
-  "errorEvent":"严重事件",
-  "warnEvent":"警告事件",
-  "infoEvent":"正常事件",
-  "source":"来源",
-  "logseverity":"严重性",
-  "executionType":"执行类型",
-  "operator":"操作者",
-  "time":"时间",
-  "account":"账户",
-  "stacktrace":"追踪",
-  "untreated":"未处理",
-  "refresh":"刷新",
-  "filter":"过滤",
-  "markedRead":"标为已读",
-  "allMarkRead":"全部标为已读",
-  "logScreen":"日志文件条件筛选",
-  "serverLogTimeRange":"服务器日志时间范围",
-  "oneDay":"1天",
-  "twoDay":"2天",
-  "threeDay":"3天",
-  "fourDay":"4天",
-  "fiveDay":"5天",
-  "sixDay":"6天",
-  "oneWeek":"1周",
-  "oneMonth":"1月",
-  "serverLogFileSize":"服务器日志文件大小",
-  "collectServerList":"需收集的服务器列表",
-  "queriedResult":"查询结果",
-  "exports":"导出",
-  "idName":"ID名",
-  "loginName":"登录名",
-  "service":"服务",
-  "productDownload":"产品下载",
-  "remoteAssistance":"远程协助",
-  "remoteTips1":"1.远程协助可以远程帮助客户协助解决技术问题，问题诊断、排查与恢复等，改善系统运行情况。",
-  "remoteTips2":"2.获取远程协助授权号请拨打热线(400-630-6430)。",
-  "telephoneTechnicalSupport":"电话技术支持",
-  "telephoneTips1":"1.软件应用指导:指导客户进行软件设置、提升客户软件应用能力。",
-  "telephoneTips2":"2.提供方式:客户服务中心热线(400-630-6430)。",
-  "telephoneTips3":"3.服务说明:免费版仅提供电话技术咨询，企业版服务包含远程操作及故障排查支持(企业版电话支持需提供易思捷客服服务号)。",
-  "communityService":"社区服务",
-  "communityTips1":"1.在线知识查询:客户随时可在易思捷科技社区知识库中查询并获得自己所需的技术材料(如问题解决方案、应用技巧等)。",
-  "communityTips2":"2.用户社区支持:客户可登陆用户社区，与其他用户、易思捷科技技术支持人员交流易思捷科技软件应用及使用技巧等方面的问题。",
-  "communityTips3":"3.安全补丁更新:客户随时可在易思捷科技在线客户服务中心下载安全补丁包。",
-  "communityTips4":"4.提供方式:社区及网络服务(易思捷科技社区)",
-  "productUpgrade":"产品升级",
-  "productTips":"免费版用于仅能获取部分升级版本，企业版用户可获取所有可升级版本。",
-  "fieldSupportService":"现场支持服务",
-  "supportTips1":"1.现场支持服务可以让客户获得与技术专家面对面的技术交流机会及现场技术协助。购买了现场支持服务后，您可以根据需要，随时申请易思捷科技的技术专家到现场为您进行产品安装、调试、问题排查以及使用方案优化等工作，我们会根据您的要求，制定最合适的技术方案，现场帮助您解决技术问题，并改善业务系统的运行情况。",
-  "supportTips2":"2.现场服务分为三个类型，具体如下:",
-  "supportTips2_1":"现场安装服务：易思捷科技派遣服务经理为用户做现场产品安装配置、测试验收。",
-  "supportTips2_2":"专业化现场服务：在收到用户要求后，易思捷科技将派遣服务经理到达用户现场，提供用户系统问题诊断、故障恢复、系统优化咨询等服务。",
-  "supportTips2_3":"现场培训服务：在收到用户要求后，易思捷科技将派遣服务经理到达用户现场，提供易思捷科技产品培训服务。",
-  "supportTips3":"3.现场服务可能授权给易思捷科技的授权技术服务中心提供。",
-  "supportTips4":"4.现场服务按工作日收费，最少购买1个工作日。",
-  "exitUserExperiencePlan":"退出用户体验计划",
-  "exitExperPlanThank":"已参加了用户体验计划，感谢您对我们产品的支持！",
-  "experiPlanTips1":"为了大家在使用虚拟机管理系统过程中操作更方便、体验更好，我们邀请您参加虚拟机管理系统用户体验计划，帮助我们提高产品的易用性和用户体验。'用户体验改善计划'所获取的信息",
-  "experiPlanTips2":"仅用于改善我们的产品和服务，不会用于广告目的或被共享于广告目的。我们将严格保护您的信息与隐私安全。",
-  "experiPlanTips3":"当您加入用户体验计划后，我们不会强制您参与我们的活动，仅在开展用户研究或用户体验活动时，我们才能在体验计划数据库中寻找适当的人选，如果您如何我们的要求，工作人员会使用邮件或电话正式发出邀请，并在您同意参与后与您商讨具体事宜。",
-  "serviceSupport":"服务与支持",
-  "joinExperiPlan":"加入体验计划",
-
-
-
-
-  "virtualMachinetemplate":"虚拟机模板",
-  "manageAppStore": "应用中心",
-  "applicationGroupTemplate":"应用组模板",
-  "OVFTemplate":"OVF模板",
-  "addVMtemplateCategory":"添加虚拟机模板类别",
-  "addVMtemplateCategorySucc":"添加虚拟机模板类别成功",
-  "addVMtemplateCategoryErr":"添加虚拟机模板类别失败",
-  "deleteCategory":"删除类别",
-  "AreYouSureYouWantToDeleteTheCurrentCategory":"您确定要删除当前类别吗",
-  "deleteCategorySucc":"删除类别成功",
-  "deleteCategoryErr":"删除类别失败",
-  "showAllTemplates":"显示全部模板",
-  "thisCategoryCanNotBeDeleted":"该分类不可删除",
-  "createCategory":"创建类别",
-  "category":"类别",
-  "PleaseEnterTheContent":"请输入内容",
-  "editTemplate":"编辑模板",
-  "editTemplateSucc":"编辑模板成功",
-  "editTemplateErr":"编辑模板失败",
-  "deleteTemplate":"删除模板",
-  "areYouSureYouWantDeleteTheCurrentTemplate":"您确定要删除当前模板吗",
-  "deleteTemplateSucc":"删除模板成功",
-  "deleteTemplateErr":"删除模板失败",
-  "advanced":"高级",
-  "conversionTemplate":"转换模板",
-  "templateStatus":"模板状态",
-  "conversion":"转换",
-  "createdLocally":"从本地创建",
-  "createdISO":"从ISO创建",
-  "addMirror":"添加镜像",
-  "isoDisk":"ISO磁盘",
-  "pleaseEnterNumberCPUs":"请输入CPU数量",
-  "pleaseEnterNumberRams":"请输入内存数量",
-  "pleaseEnterName":"请输入名称",
-  "pleaseSelectCategory":"请选择类别",
-  "CPUHotAdd":"CPU热添加",
-  "RAMHotAdd":"内存热添加",
-  "disk":"磁盘",
-  "rackEditDescription": "描述",
-  "name": "名称",
-  "OVATemplate": "OVA模板",
-  "roleInformation": "基本信息",
-
-
+  "chineseOption":"中文",
+  "englishOption":"英文",
   "loginUserName":"用户名",
   "loginPassword":"密码",
   "choiceLanguage":"选择语言",
-  "loginLogin":"登录",
-  "rememberPassword":"记住密码"
-
-
-
+  "login":"登录",
+  "rememberPassword":"记住密码",
+  "homepage":"首页",
+  "component":"组件"
 
 
 }
